[package]
name = "sync_cow"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "Thread-safe clone-on-write container for fast concurrent writing and reading."
homepage = "https://github.com/w0xel/sync_cow"
repository = "https://github.com/w0xel/sync_cow"
readme = "README.md"
categories = ["concurrency", "data-structures"]
keywords = ["cow", "data-structures", "concurrency", "thread-safety", "runtime-efficiency"]
exclude = [".github"]

[dependencies]

[profile.release]
lto = "fat"

[[example]]
name = "write_and_read_thread"

[[example]]
name = "simple"
